; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-udp-alloc-cb-fail.c_cl_recv_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-udp-alloc-cb-fail.c_cl_recv_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }

@UV_ENOBUFS = common dso_local global i64 0, align 8
@cl_recv_cb_called = common dso_local global i32 0, align 4
@close_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i32*, %struct.sockaddr*, i32)* @cl_recv_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cl_recv_cb(i32* %0, i64 %1, i32* %2, %struct.sockaddr* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.sockaddr*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32* %2, i32** %8, align 8
  store %struct.sockaddr* %3, %struct.sockaddr** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @CHECK_HANDLE(i32* %11)
  %13 = load i32, i32* %10, align 4
  %14 = icmp eq i32 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i32 @ASSERT(i32 %15)
  %17 = load i64, i64* %7, align 8
  %18 = load i64, i64* @UV_ENOBUFS, align 8
  %19 = icmp eq i64 %17, %18
  %20 = zext i1 %19 to i32
  %21 = call i32 @ASSERT(i32 %20)
  %22 = load i32, i32* @cl_recv_cb_called, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* @cl_recv_cb_called, align 4
  %24 = load i32*, i32** %6, align 8
  %25 = load i32, i32* @close_cb, align 4
  %26 = call i32 @uv_close(i32* %24, i32 %25)
  ret void
}

declare dso_local i32 @CHECK_HANDLE(i32*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_close(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
